--- a/src/components/Home/Featured/featured.module.css
+++ b/src/components/Home/Featured/featured.module.css
@@ -1,7 +1,7 @@
 .featured {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
-  column-gap: 0.3em;
+  column-gap: 0.2em;
   justify-items: center;
   row-gap: 2em;
 }
