--- a/src/components/Home/Footer/footer.module.css
+++ b/src/components/Home/Footer/footer.module.css
@@ -1,5 +1,5 @@
 .footer {
-  padding: 4em 0;
+  padding: 3em 0;
   border-top: 5px solid rgb(var(--primary));
   color: rgba(var(--black), 0.5);
 }
@@ -9,4 +9,10 @@
   color: rgb(var(--main-border));
   border: 0;
   margin: 3.5em 0;
+}
+
+@media screen and (max-width: 768px) {
+  .footer {
+    padding: 1.5em 0;
+  }
 }
